Fonts, quotes updates and 88rising content
- Updated Google Font's api in all pages
- Updated 88rising with images and videos
- Changes in 88rising assets
- Hidden Karamatsu project, pending for other project sections

--- a/Fureverhome.html
+++ b/Fureverhome.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&family=Noto+Sans+JP&family=Noto+Sans:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <title>Fureverhome | Luke Do</title>
 
@@ -76,13 +76,13 @@
                 <h2>Initial Research</h2>
                 <div class="research-wireframe">
                     <h3>The issue at hand</h3>
-                    <p>Approaching this project, my teammates and I first sought out research and journal articles, focusing on secondary research to familiarise ourselves with this domain and figure out if this is a domain we could potentially intervene and address with design. These articles pointed to resistance among potential and newly rescued dog owners with The Zebra’s survey noting 60% of adopted pets are returned or given away after 6 months, citing concerns about potential health risks and a lack of knowledge on how to effectively care for rescued pets.</p>
+                    <p>Approaching this project, my teammates and I first sought out research and journal articles, focusing on secondary research to familiarise ourselves with this domain and figure out if this is a domain we could potentially intervene and address with design. These articles pointed to resistance among potential and newly rescued dog owners with The Zebra’s survey noting <span>>60% of adopted pets are returned or given away after 6 months, citing concerns about potential health risks and a lack of knowledge on how to effectively care for rescued pets.</span></p>
                     <div class="project-quotes">
-                        <h4>"42.8% of pet owners favors shelter or rescue adoption for the chance to give second chances, however, without proper guidance and support, they may face challenges in ensuring successful and lasting adoptions"</h4>
-                        <p>The Zebra’s 2023 survey - 1500 participants</p>
+                        <h4>"42.8% of pet owners favors shelter or rescue adoption for the chance to give second chances, however, <span>without proper guidance and support, they may face challenges in ensuring successful and lasting adoptions</span>"</h4>
+                        <p>— The Zebra’s 2023 survey with 1500 participants</p>
                     </div>
                     <h3>User Interviews and Persona</h3>
-                    <p>To gain a better understanding of how pet owners and pet shelters view their experience with rescued dogs and the difference between them and buying from breeders, we conducted user interviews with 7 participants, each being 30 minutes long on both Zoom and in person, with 4 people who adopted from breeders, 2 who adopted rescues and a volunteer from the SPCA, a local animal shelters. From these interviews, we were able to synthesize the findings into insights and created 3 user personas of each of our potential end users with our primary user being a newly rescued pet owner.</p>
+                    <p>To gain a better understanding of how pet owners and pet shelters view their experience with rescued dogs and the difference between them and buying from breeders, we <span>conducted user interviews with 7 participants, each being 30 minutes long on both Zoom and in person</span>, with 4 people who adopted from breeders, 2 who adopted rescues and a volunteer from the SPCA, a local animal shelters. From these interviews, we were able to synthesize the findings into insights and created 3 user personas of each of our potential end users with our primary user being a newly rescued pet owner.</p>
                     <figure class="project-img static-img figure-analysis">
                         <img alt="Research Insights" class="lazy js-off" src="img\fureverhome\ResearchFindings_100.jpg"
                         data-src="img\fureverhome\ResearchFindings_400.jpg"
@@ -91,7 +91,7 @@
                                      img\fureverhome\ResearchFindings_1080.jpg 1080w"
                         data-sizes="100w">
                         <noscript>
-                            <img src="iimg\fureverhome\ResearchFindings_100.jpg" alt="Research Insights"
+                            <img src="img\fureverhome\ResearchFindings_100.jpg" alt="Research Insights"
                             srcset="img\fureverhome\ResearchFindings_400.jpg 400w,
                                     img\fureverhome\ResearchFindings_800.jpg 600w,
                                     img\fureverhome\ResearchFindings_1080.jpg 1080w" 
@@ -208,7 +208,7 @@
                             sizes="(min-width: 74rem) 50vw, 100vw"
                             >
                         </noscript>
-                        <figcaption class="caption-analysis">Low Fidelity Wireframes of FurEverHome's proposed sections</figcaption>
+                        <figcaption class="caption-analysis">Low Fidelity Wireframes of FurEverHome's proposed secondary user flow sections</figcaption>
                     </figure> 
                     <figure class="project-img static-img figure-analysis">
                         <img alt="High Fidelity Wireframes" class="lazy js-off" src="img\fureverhome\HighFidelity_100.jpg"
@@ -225,11 +225,11 @@
                             sizes="(min-width: 74rem) 50vw, 100vw"
                             >
                         </noscript>
-                        <figcaption class="caption-analysis">High Fidelity Wireframes of FurEverHome's main sections</figcaption>
+                        <figcaption class="caption-analysis">High Fidelity Wireframes of FurEverHome's main secondary user flow sections</figcaption>
                     </figure> 
 
                     <h3>Competitive Analysis</h3>
-                    <p>When iterating on what how FurEverHome could differentiate itself, the team conducted a competitive analysis with each of us taking on a different dog app, using them for a week and then coming back as a team to discuss. One thing that we noticed while researching was that apart from encompassing a wider selection of features than other pet dog apps, FurEverHome truly stands out as the only application on the market (from our research) that focuses solely on rescue dogs.</p>
+                    <p>When iterating on what how FurEverHome could differentiate itself, the team <span>conducted a competitive analysis with each of us taking on a different dog app, using them for a week and then coming back as a team to discuss.</span> One thing that we noticed while researching was that apart from encompassing a wider selection of features than other pet dog apps, FurEverHome truly stands out as the only application on the market (from our research) that focuses solely on rescue dogs.</p>
                     <figure class="project-img static-img figure-analysis">
                         <img alt="Research Insights" class="lazy js-off" src="img\fureverhome\CompetitiveAnalysis_100.jpg"
                         data-src="img\fureverhome\CompetitiveAnalysis_400.jpg"
@@ -249,7 +249,7 @@
                     </figure> 
 
                     <h3>User Testing and Addressing Issues</h3>
-                    <p>To gain a better understanding of how users would approach Fureverhome, the team conducted in-person user testing with 8 people consisting of 2 primary users, 4 secondary users and 2 volunteers, asking them to perform a setlist of different tasks utilising observation and the think-aloud method in combination with questionnaires.</p>
+                    <p>To gain a better understanding of how users would approach Fureverhome, the team <span>conducted in-person user testing with 8 people consisting of 2 primary users, 4 secondary users and 2 volunteers</span>, asking them to perform a setlist of different tasks utilising observation and the think-aloud method in combination with questionnaires.</p>
                     <figure class="project-img static-img figure-analysis">
                         <img alt="User Testing Plan" class="lazy js-off" src="img\fureverhome\ThePlan_100.jpg"
                         data-src="img\fureverhome\UserJourney_400.jpg"
@@ -271,12 +271,12 @@
                     </p>
                     <div class="grid project-card-2c">
                         <div class="project-quotes">
-                            <h4>"The mood tracker feature alone makes me want to use the app"</h4>
-                            <p>Primary user test participant</p>
+                            <h4>"<span>The mood tracker feature alone makes me want to use the app</span>"</h4>
+                            <p>— Primary user test participant</p>
                         </div>
                         <div class="project-quotes">
-                            <h4>"The copywriting for the search bar on the home screen needs to hint what it is for since I don’t really know if this is for resources or for (the) inbox"</h4>
-                            <p>Volunteer user test participant</p>
+                            <h4>"<span>The copywriting for the search bar on the home screen here needs to hint what it is for</span> since I don’t really know if this is for resources or for (the) inbox"</h4>
+                            <p>— Volunteer user test participant</p>
                         </div>
                     </div>
                     <p>To optimize our project given our project timeline, I suggested to the team that we split the issues our participants encountered into high and low priorities fixes basing on how our participant found to be the biggest obstacle for them to use the application.</p>
@@ -401,7 +401,7 @@
 
             <section class="project-analysis" id="Keytakeaways">
                 <h2>Reflection</h2>
-                <p>As my first real UI/UX project that I have done in my academic career, I’m really proud of what my teammates and I were able to achieve, gaining both praise from fellow classmates and the teaching team during our final showcase. I was able to learn how to efficiently prototype a fully functional prototype application using Figma's components (avoiding the tedious process of connecting the same link over and again D:).</p>
+                <p>As my first real UI/UX project that I have done in my academic career, I’m really proud of what my teammates and I were able to achieve, gaining both praise from fellow classmates and the teaching team during our final showcase. I was able to <span>learn how to efficiently prototype a fully functional prototype application using Figma's components</span> (avoiding the tedious process of connecting the same link over and again D:).</p>
                 <p>I also learned how to collaborate within a team when working on developing a UI/UX application, especially keeping each other informed, and most importantly working together to overcome challenges we encountered basing our decisions on our research and user’s insights.</p>
             </section>
 
