--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&family=Noto+Sans+JP&family=Noto+Sans:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <title>Home | Luke Do</title>
 
@@ -150,7 +150,7 @@
 
                     <div class="project-img">
                         <figure>
-                            <video class="lazy js-off" width="1920" height="1080" data-src="img/2021_Icebreaker/Spring2021.webm" src="img/2021_Icebreaker/Spring2021_fallback_100.jpg" autoplay loop playsinline muted aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail" controls="controls"></video>
+                            <video class="lazy js-off" width="1920" height="1080" data-src="img/2021_Icebreaker/Spring2021.webm" src="img/2021_Icebreaker/Spring2021_fallback_100.jpg" autoplay loop playsinline muted aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"></video>
                             <img alt="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"class="lazy js-off" src="img/2021_Icebreaker/Spring2021_fallback_100.jpg"
                             data-src="img/2021_Icebreaker/Spring2021_fallback_400.jpg"
                             data-srcset="img/2021_Icebreaker/Spring2021_fallback_400.jpg 400w,
@@ -158,7 +158,7 @@
                             data-sizes="100w">
 
                             <noscript>  
-                                <video src="img/2021_Icebreaker/Spring2021.webm" autoplay loop playsinline muted width="1920" height="1080" aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail" controls="controls"></video> 
+                                <video src="img/2021_Icebreaker/Spring2021.webm" autoplay loop playsinline muted width="1920" height="1080" aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"></video> 
                                     <img src="img/2021_Icebreaker/Spring2021_fallback_400.jpg" alt="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"
                                     srcset="img/2021_Icebreaker/Spring2021_fallback_400.jpg 400w,
                                             img/2021_Icebreaker/Spring2021_fallback_600.jpg 600w" 
@@ -177,7 +177,7 @@
                 </div>
             </div>
             <!-- Fifth Project-->
-            <div class="scroll-reveal container left active">
+            <!-- <div class="scroll-reveal container left active">
                 <div class="grid featured-project" id="fifth-project">
 
                     <div class="project-details project-item ">
@@ -193,7 +193,7 @@
                     </div>
 
                 </div>
-            </div>
+            </div> -->
         </section>
         <p class="h2-sub">More projects analysis and project gallery coming soon 👀!!</p>
     </main>
