Uploaded content for 88rising website

--- a/88rising.html
+++ b/88rising.html
@@ -112,7 +112,6 @@
                             sizes="(min-width: 74rem) 50vw, 100vw"
                             >
                         </noscript>
-                        <figcaption class="caption-analysis">Insights gathered through interviews </figcaption>
                     </figure> 
                     <h3>The root of the issue</h3>
                     <p>To find the root of the problem, the team conducted user interviews and surveys with <span>89 respondents</span> (1 over 88!!), ranging from casual to die-hard fans regarding their music-sharing habits, and their perception of 88rising and its artist roster.</p>
@@ -136,7 +135,7 @@
                     <h3>Why redesign the 88rising website?</h3>
                     <p><span>88rising's current website primarily focuses on merchandise</span>, lacking clarity on its current roster of artists and background information. Although YouTube serves as a significant touchpoint for their original content, it is scattered across various channels, <span>making it challenging for fans to discover and learn more</span> about their favourite artists</p>
                     <figure class="figure-analysis project-img">
-                        <video class="lazy js-off" width="1920" height="1080" data-src="img\88rising\88website.mp4" src="img\88rising\88website_100.png" autoplay loop playsinline muted aria-label="88rising's current website and content on YouTube"></video>
+                        <video class="lazy js-off" width="1920" height="1080" data-src="img\88rising\88website.webm" src="img\88rising\88website_100.png" autoplay loop playsinline muted aria-label="88rising's current website and content on YouTube"></video>
                         <img alt="Character's Mask On" class="lazy js-off" src="img\88rising\88website_100.png"
                         data-src="img\88rising\88website_400.png"
                         data-srcset="img\88rising\88website_400.png 400w,
@@ -145,7 +144,7 @@
                         data-sizes="100w">
 
                         <noscript>
-                            <video src="img\88rising\88website.mp4" autoplay loop playsinline muted aria-label="88rising's current website"></video> 
+                            <video src="img\88rising\88website.webm" autoplay loop playsinline muted aria-label="88rising's current website"></video> 
                             <img src="img\88rising\88website_100.png" alt="88rising's current website and content on YouTube"
                             srcset="img\88rising\88website_400.png 400w,
                                     img\88rising\88website_600.png 600w,
@@ -177,7 +176,7 @@
                 <div class="result">
                     <h2>The Result</h2>
                     <figure class="figure-analysis project-img">
-                        <video class="lazy js-off" width="1920" height="1080" data-src="img\88rising\walkthrough.webm" src="img\88rising\Thumbnail_100.png" loop playsinline aria-label="88rising's experience design prototype walkthrough" controls="controls"></video>
+                        <video class="lazy js-off" width="1920" height="1080" data-src="img\88rising\walkthrough.mp4" src="img\88rising\Thumbnail_100.png" loop playsinline aria-label="88rising's experience design prototype walkthrough" controls="controls"></video>
                         <img alt="88rising's experience design prototype walkthrough" class="lazy js-off" src="img\88rising\Thumbnail_100.png"
                         data-src="img\88rising\Thumbnail_400.png"
                         data-srcset="img\88rising\Thumbnail_400.png 400w,
@@ -186,7 +185,7 @@
                         data-sizes="100w">
 
                         <noscript>
-                            <video src="img\88rising\walkthrough.webm" loop playsinline aria-label="Character's Mask Off" controls="controls"></video> 
+                            <video src="img\88rising\walkthrough.mp4" loop playsinline aria-label="Character's Mask Off" controls="controls"></video> 
                             <img src="img\88rising\Thumbnail_400.png" alt="88rising's experience design prototype walkthrough"
                             srcset="img\88rising\Thumbnail_400.png 400w,
                                     img\88rising\Thumbnail_800.png 800w,
