--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
             <div class="about-bio">
                 <h1>About me</h1>
 
-                <p>Hi! I'm Luke and I'm a Product and UI/UX Designer who enjoys exploring different ways of breathing in life into what would otherwise be a static image to enhance people's day to day experience. <span>I believe that design can be a subtle yet impactful way to craft meaningful connections between people and the world around them through blending narratives, functionalities and overall commitment to social good (as you can never have too much positivity in the world!)</span></p>
+                <p>Hi! I'm Luke and I'm a Product and UI/UX Designer who enjoys exploring different ways of breathing in life into what would otherwise be a static image to enhance people's day to day experience. <span>I believe that design can be a subtle yet impactful way to craft meaningful connections between people and the world around them through blending narratives, functionalities and overall commitment to social good</span> (as you can never have too much positivity in the world!)</p>
 
                 <p>Recently graduated from <a href="https://www.sfu.ca/siat.html" class="in-text-link" target="_blank">The School of Interactive Arts and Technology</a>, I have been volunteering at the <a href="https://sfusummerfestival.com/" class="in-text-link" target="_blank">SFU Summer Festival</a> as their social media coordinator and graphic designer. I have also worked at <a href="https://www.fraserhealth.ca/" class="in-text-link">Fraser Health</a> as a Digital Media Communication Specialist where I designed various graphics to advocate for Indigenous Health across the lower mainland.</p>
 
