Added 88rising to homepage and nav transition preping

--- a/88rising.html
+++ b/88rising.html
@@ -17,70 +17,71 @@
 
     <body>
         <header>
-            <nav class="grid nav-grid-master">
-                <a href="index.html" class="nav-item logo-text">
-                    Luke Do
-                </a>
-                <div class="nav-grid-text grid nav-button add-gutters">
-                    <a href="index.html#Featured_Project" class="nav-item">Projects</a>
-                    <a href="about.html" class="nav-item">About</a>
-                    <a href="https://drive.google.com/file/d/1_7IwkXYrgivNkrfzmJT4NRy8aM7-Vd8J/view?usp=sharing" class="nav-item" target="_blank">Resume</a>
-                </div>
-    
-            </nav>
+            <!-- <div class="header"> -->
+                <nav class="grid nav-grid-master" id="navBar">
+                    <a href="index.html" class="nav-item logo-text">
+                        Luke Do
+                    </a>
+                    <div class="nav-grid-text grid nav-button add-gutters">
+                        <a href="index.html#Featured_Project" class="nav-item">Projects</a>
+                        <a href="about.html" class="nav-item">About</a>
+                        <a href="https://drive.google.com/file/d/1_7IwkXYrgivNkrfzmJT4NRy8aM7-Vd8J/view?usp=sharing" class="nav-item" target="_blank">Resume</a>
+                    </div>
+        
+                </nav>
 
-            <section class="project-banner">
-                    <div class="grid project-banner">
-                    <!-- left side -->
-                    <div class="project-img static-img">
-                        <figure>
-                            <img alt="88rising Banner image" class="lazy js-off" src="img\88rising\Thumbnail_100.png"
-                            data-src="img\88rising\Thumbnail_400.png"
-                            data-srcset="img\88rising\Thumbnail_400.png 400w,
-                                         img\88rising\Thumbnail_600.png 600w,
-                                         img\88rising\Thumbnail_1080.png 1080w"
-                            data-sizes="100w">
-                            <noscript>
-                                <img src="img\88rising\Thumbnail_400.png" alt="88rising Banner image"
-                                srcset="img\88rising\Thumbnail_400.png 400w,
-                                        img\88rising\Thumbnail_600.png 600w,
-                                        img\88rising\Thumbnail_1080.png 1080w" 
-                                sizes="(min-width: 74rem) 50vw, 100vw"
-                                >
-                            </noscript>
-                        </figure> 
-                    </div> 
-                    <!-- right side -->
-                        <div class="project-details">
-                            <p class="project-type">Experience Design - UX Research - UI/UX Design</p>
-                            <h1>88Rising</h1>
-                            <p class="project-description">Reimagining 88rising’s website experience to assist fans in discovering and supporting lesser-known artists </p> 
-                            <div class="grid project-roles">
-                                <div class="col-1">
-                                    <p class="role-type">The Team</p>
-                                    <p class="role-details"><a href="https://www.justinyu.design/" class="in-text-link" target="_blank">Justin Yu</a></p>
-                                    <p class="role-details"><a href="https://alexluowan.ca/" class="in-text-link" target="_blank">Alex Luowan</a></p>
-                                    <p class="role-details">Claret Egwim-Nwagbara</p>
-                                    <p class="role-details">Terrence Xu</p>
-                                </div>
-                                <div class="col-2">
-                                    <p class="role-type">Roles</p>
-                                    <p class="role-details">UX Researcher, Designer</p>
-                                    <p class="role-details">Decision Maker</p>
-                                    <p class="role-details">Copywriting</p>
-                                </div>
-                                <div class="col-3">
-                                    <p class="role-type">Tools</p>
-                                    <p class="role-details">Figma</p>
-                                    <p class="role-details">After Effects</p>
-                                    <p class="role-details">Premiere Pro</p>
-                                    <p class="role-details">Audacity</p>
+                <section class="project-banner" id="rising-card">
+                        <div class="grid project-banner">
+                        <!-- left side -->
+                        <div class="project-img static-img">
+                            <figure>
+                                <img alt="88rising Banner image" class="lazy js-off" src="img\88rising\Thumbnail_100.png"
+                                data-src="img\88rising\Thumbnail_400.png"
+                                data-srcset="img\88rising\Thumbnail_400.png 400w,
+                                            img\88rising\Thumbnail_600.png 600w,
+                                            img\88rising\Thumbnail_1080.png 1080w"
+                                data-sizes="100w">
+                                <noscript>
+                                    <img src="img\88rising\Thumbnail_400.png" alt="88rising Banner image"
+                                    srcset="img\88rising\Thumbnail_400.png 400w,
+                                            img\88rising\Thumbnail_600.png 600w,
+                                            img\88rising\Thumbnail_1080.png 1080w" 
+                                    sizes="(min-width: 74rem) 50vw, 100vw"
+                                    >
+                                </noscript>
+                            </figure> 
+                        </div> 
+                        <!-- right side -->
+                            <div class="project-details">
+                                <p class="project-type">Experience Design - UX Research - UI/UX Design</p>
+                                <h1>88Rising</h1>
+                                <p class="project-description">Reimagining 88rising’s website experience to assist fans in discovering and supporting lesser-known artists </p> 
+                                <div class="grid project-roles">
+                                    <div class="col-1">
+                                        <p class="role-type">The Team</p>
+                                        <p class="role-details"><a href="https://www.justinyu.design/" class="in-text-link" target="_blank">Justin Yu</a></p>
+                                        <p class="role-details"><a href="https://alexluowan.ca/" class="in-text-link" target="_blank">Alex Luowan</a></p>
+                                        <p class="role-details">Claret Egwim-Nwagbara</p>
+                                        <p class="role-details">Terrence Xu</p>
+                                    </div>
+                                    <div class="col-2">
+                                        <p class="role-type">Roles</p>
+                                        <p class="role-details">UX Researcher, Designer</p>
+                                        <p class="role-details">Decision Maker</p>
+                                        <p class="role-details">Copywriting</p>
+                                    </div>
+                                    <div class="col-3">
+                                        <p class="role-type">Tools</p>
+                                        <p class="role-details">Figma</p>
+                                        <p class="role-details">After Effects</p>
+                                        <p class="role-details">Premiere Pro</p>
+                                        <p class="role-details">Audacity</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                </div>
-            </section>
-
+                    </div>
+                </section>
+            <!-- </div> -->
         </header>
 
         <main>
@@ -174,7 +175,7 @@
                 </div>
 
                 <div class="result">
-                    <h2>The Result</h2>
+                    <h2>Part 2: The Result</h2>
                     <figure class="figure-analysis project-img">
                         <video class="lazy js-off" width="1920" height="1080" data-src="img\88rising\walkthrough.mp4" src="img\88rising\Thumbnail_100.png" loop playsinline aria-label="88rising's experience design prototype walkthrough" controls="controls"></video>
                         <img alt="88rising's experience design prototype walkthrough" class="lazy js-off" src="img\88rising\Thumbnail_100.png"
@@ -272,7 +273,7 @@
                 <h2>Reflection</h2>
                 <p>Looking back, this was definitely the most challenging project I’ve been a part of and it was really an eye-opening experience, especially during my first-ever design sprint where I got the chance to be the team’s decision maker. I learned how to frame problems properly, make design decisions, and quickly generate and test those ideas. This rapid and hyper-focused process of iterating and feedback between user interviews and the teaching staff taught me to <span>truly not design in my head and to challenge every assumption I might have beforehand through research data.</span></p>
 
-                <p>Another crucial lesson that I learned the hard way is to truly <span>trust the process and let the project take shape as the it goes on.</span> In the beginning, the team spent 3-4 weeks constantly doubting ourselves as we weren't able to lock in the "perfect" problem space rather than settling for just "good enough" as we were chasing perfection. This constant back and forth delayed the project until the final weeks of the project timeline.</p>
+                <p>Another crucial lesson that I learned the hard way is to truly <span>trust the process and let the project take shape as time goes on.</span> In the beginning, the team spent 3-4 weeks constantly doubting ourselves as we weren't able to lock in the "perfect" problem space rather than settling for just "good enough" and letting the project develop as we research. This constant back and forth delayed the project until the final weeks of the project timeline.</p>
                 <figure class="project-img static-img figure-analysis">
                     <img alt="Research Insights" class="lazy js-off" src="img\88rising\figma_100.png"
                     data-src="img\88rising\figma_400.png"
