--- a/Fureverhome.html
+++ b/Fureverhome.html
@@ -30,7 +30,7 @@
 
             </nav>
 
-            <section class="project-banner">
+            <section class="project-banner" id="fureverhome-card">
                     <div class="grid project-banner">
                     <!-- left side -->
                     <div class="project-img" id="iframe-container">
