--- a/icebreaker.html
+++ b/icebreaker.html
@@ -30,7 +30,7 @@
 
             </nav>
 
-            <section class="project-banner">
+            <section class="project-banner" id="icebreaker-card">
                     <div class="grid project-banner">
                     <!-- left side -->
                         <div class="project-img">
